r.horizon: fix example
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65615 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.horizon/r.horizon.html
+++ b/raster/r.horizon/r.horizon.html
@@ -177,7 +177,7 @@ Raster map mode (output maps "horangle*" become input for <em>r.sun</em>):
 # we put a bufferzone of 10% of maxdistance around the study area
 # compute only direction between 90 and 270 degrees
 r.horizon elevation=elevation step=30 start=90 end=300 \
-    bufferzone=200 file=horangle maxdistance=5000
+    bufferzone=200 output=horangle maxdistance=5000
 </pre></div>
 
 
