--- a/vector/v.to.points/v.to.points.html
+++ b/vector/v.to.points/v.to.points.html
@@ -9,7 +9,7 @@ about <b>type</b> parameter.
 The output is a vector map with 2 layers. Layer 1 holds the category
 of the input features; all points created along the same line have the
 same category, equal to the category of that line. In layer 2 each
-point has it's unique category; other attributes stored in layer 2
+point has its unique category; other attributes stored in layer 2
 are <em>lcat</em> - the category of the input line and <em>along</em>
 - the distance from line's start.
 
