d.mon: note also d.frame
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65627 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/display/d.mon/d.mon.html
+++ b/display/d.mon/d.mon.html
@@ -118,7 +118,8 @@ d.mon stop=wx0
 <a href="d.erase.html">d.erase</a>,
 <a href="d.redraw.html">d.redraw</a>,
 <a href="d.rast.html">d.rast</a>,
-<a href="d.vect.html">d.vect</a>
+<a href="d.vect.html">d.vect</a>,
+<a href="d.frame.html">d.frame</a>
 </em>
 
 <p>
@@ -130,4 +131,5 @@ of variables for rendering</a>,
 
 Martin Landa, OSGeoREL, Czech Technical University in Prague, Czech Republic
 
-<p><i>Last changed: $Date$</i>
+<p>
+<i>Last changed: $Date$</i>
