change REFERENCE to REFERENCES in the manual pages (thanks to Ludmila Furtkevicova)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65678 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.param.scale/r.param.scale.html
+++ b/raster/r.param.scale/r.param.scale.html
@@ -87,7 +87,7 @@ r.param.scale in=elevation.10m output=morphology param=feature size=9
 Fix bug when `constrain through central cell' option selected. Create color
 tables for all output files (presently only on features).
 
-<h2>REFERENCE</h2>
+<h2>REFERENCES</h2>
 
 Wood, J. (1996): The Geomorphological characterisation of Digital Elevation
 Models. Diss., Department of Geography, University of Leicester, U.K.
