--- a/raster/r.surf.fractal/r.surf.fractal.html
+++ b/raster/r.surf.fractal/r.surf.fractal.html
@@ -84,7 +84,7 @@ top: fractal dimension d=2.90 (left: elevation map, right: aspect map)
 </center>
 
 
-<h2>REFERENCE</h2>
+<h2>REFERENCES</h2>
 
 Saupe, D. (1988) Algorithms for random fractals, in Barnsley M., 
  Devaney R., Mandelbrot B., Peitgen, H-O., Saupe D., and Voss R.
