--- a/scripts/d.polar/d.polar.html
+++ b/scripts/d.polar/d.polar.html
@@ -59,7 +59,7 @@ d.polar aspect
 <a href="http://www.xgraph.org">Xgraph</a> must be installed for the
 <b>-x</b> flag to function.
 
-<h2>REFERENCE</h2>
+<h2>REFERENCES</h2>
 
 J. Hofierka, H. Mitasova, and M. Neteler (2009): Terrain parameterization in GRASS.
 In T. Hengl and H.I. Reuter, editors, Geomorphometry: concepts, software, applications. Elsevier
