--- a/scripts/i.oif/i.oif.html
+++ b/scripts/i.oif/i.oif.html
@@ -59,7 +59,7 @@ i.oif input=lsat7_2002_10,lsat7_2002_20,lsat7_2002_30,lsat7_2002_40,lsat7_2002_5
 </pre></div>
 
 
-<h2>REFERENCE</h2>
+<h2>REFERENCES</h2>
 
 Jensen, 1996. Introductory digital image processing. Prentice Hall, 
 p.98. ISBN 0-13-205840-5
