--- a/vector/v.buffer/v.buffer.html
+++ b/vector/v.buffer/v.buffer.html
@@ -80,7 +80,7 @@ Buffer of 100m around the "lakes" polygons (map subset, original areas
 shown in black)
 </center>
 
-<h2>REFERENCE</h2>
+<h2>REFERENCES</h2>
 
 <ul>
 <li><a href="http://trac.osgeo.org/geos">GEOS Library</a></li>
