temporal manual: wiki link added (crontributed by Vero Andreo)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65702 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/temporal/t.rast.aggregate/t.rast.aggregate.html
+++ b/temporal/t.rast.aggregate/t.rast.aggregate.html
@@ -130,6 +130,8 @@ t.info tempmean_yearly
 <a href="r.series.html">r.series</a>,
 <a href="g.region.html">g.region</a>,
 <a href="r.mask.html">r.mask</a>
+<p>
+<a href="http://grasswiki.osgeo.org/wiki/Temporal_data_processing">Temporal data processing Wiki</a>
 </em>
 
 <h2>AUTHOR</h2>
