--- a/temporal/t.rast.algebra/t.rast.algebra.html
+++ b/temporal/t.rast.algebra/t.rast.algebra.html
@@ -473,6 +473,8 @@ C = if({equal}, B {#,contain} A > 1, (B {+,contain,l} A {-,equal,l} B) {equal,=/
 <a href="t.select.html">t.select</a>
 <a href="t.rast3d.mapcalc.html">t.rast3d.mapcalc</a>
 <a href="t.rast.mapcalc.html">t.rast.mapcalc</a>
+<p>
+<a href="http://grasswiki.osgeo.org/wiki/Temporal_data_processing">Temporal data processing Wiki</a>
 </em>
 
 <h2>REFERENCES</h2>
