--- a/temporal/t.rast.list/t.rast.list.html
+++ b/temporal/t.rast.list/t.rast.list.html
@@ -157,6 +157,8 @@ vector dataset <a href="t.vect.list.html#using-method-option">t.vect.list</a>
 <a href="t.list.html">t.list</a>,
 <a href="t.rast3d.list.html">t.rast3d.list</a>,
 <a href="t.vect.list.html">t.vect.list</a>
+<p>
+<a href="http://grasswiki.osgeo.org/wiki/Temporal_data_processing">Temporal data processing Wiki</a>
 </em>
 
 <h2>AUTHOR</h2>
