--- a/temporal/t.rast.series/t.rast.series.html
+++ b/temporal/t.rast.series/t.rast.series.html
@@ -41,6 +41,8 @@ t.rast.series input=tempmean_monthly \
 <a href="r.series.html">r.series</a>,
 <a href="t.create.html">t.create</a>,
 <a href="t.info.html">t.info</a>
+<p>
+<a href="http://grasswiki.osgeo.org/wiki/Temporal_data_processing">Temporal data processing Wiki</a>
 </em>
 
 <h2>AUTHOR</h2>
