v.buffer manual: explain corners (caps) with screenshots
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65712 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/vector/v.buffer/v.buffer.html
+++ b/vector/v.buffer/v.buffer.html
@@ -31,6 +31,13 @@ buggy for some input data).
 
 <h3>Corner settings</h3>
 
+The following corners (also called "cap") exist:
+<ul>
+<li>no cap: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="v_buffer_no_cap.png" valign="middle" alt="line buffer: no cap"></li>
+<li>rounded cap: <img src="v_buffer_rounded_cap.png" valign="middle" alt="line buffer: rounded cap"></li>
+<li>square cap: <img src="v_buffer_square_cap.png" valign="middle" alt="line buffer: square cap"></li>
+</ul>
+
 By default <em>v.buffer</em> creates rounded buffers (blue color on
 figure below): 
 
