d.legend manual: example + screenshot added
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65718 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/display/d.legend/d.legend.html
+++ b/display/d.legend/d.legend.html
@@ -74,6 +74,20 @@ If the histogram appears empty, check your region settings.
 If the raster map's <i>units</i> metadata has been set with the
 <em>r.support</em> module then it will be displayed along side the legend.
 
+<h2>EXAMPLE</h2>
+
+Displaying the legend along with a histogram (North Carolina Sample dataset):
+
+<div class="code"><pre>
+g.region raster=elevation -p
+d.rast elevation
+d.legend -d elevation
+</pre></div>
+
+<center>
+<img src="d_legend.png" alt="Elevation map with legend" border=1>
+</center>
+
 
 <h2>SEE ALSO</h2>
 
