imagery intro manual: mention i.eb.* and i.evapo.*
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65808 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/imagery/i.evapo.mh/i.evapo.mh.html
+++ b/imagery/i.evapo.mh/i.evapo.mh.html
@@ -1,7 +1,7 @@
 <h2>DESCRIPTION</h2>
 
-<em>i.evapo.MH</em> Calculates the reference ET after Hargreaves (1985)
-and Modified Hargreaves (2001). 
+<em>i.evapo.mh</em> calculates the reference evapotranspiration (ET) after
+Hargreaves (1985) and the Modified Hargreaves (2001). 
 
 <!-- TODO Hargreaves (2001) citation missing! -->
 
@@ -15,14 +15,20 @@ and Modified Hargreaves (2001).
 </em>
 
 <h2>REFERENCES</h2>
-Hargreaves GL, Hargreaves GH, Riley JP, 1985. Agricultural benefits for
+
+<ul>
+<li> Hargreaves GL, Hargreaves GH, Riley JP, 1985. Agricultural benefits for
 Senegal River Basin. Journal of Irrigation and Drainange Engineering,
-ASCE, 111(2):113-124.
-<p>Droogers P, Allen RG, 2002. Towards a simplified global reference
-evapotranspiration equation. Irrigation Science.
-<p>Droogers, P., and R.G. Allen. 2002. Estimating reference evapotranspiration
-under inaccurate data conditions. Irrigation and Drainage Systems 16: 33-45.
-<p>Hargreaves and Samani, 1985. <!-- incomplete -->
+ASCE, 111(2):113-124.</li>
+<li> Hargreaves, 2001 - incomplete</li>
+<li> Droogers P, Allen RG, 2002. Towards a simplified global reference
+evapotranspiration equation. Irrigation Science.</li>
+<li> Droogers, P., Allen RG. 2002. Estimating reference evapotranspiration
+under inaccurate data conditions. Irrigation and Drainage Systems 16: 33-45.</li>
+<li> Hargreaves GH, Samani ZA, 1985. Reference crop evapotranspiration from
+ ambient air temperature. American Society of Agricultural Engineers
+ (Microfiche collection)(USA). no. fiche no. 85-2517.</li>
+</ul>
 
 <h2>AUTHORS</h2>
 
