--- a/imagery/i.evapo.pm/i.evapo.pm.html
+++ b/imagery/i.evapo.pm/i.evapo.pm.html
@@ -1,6 +1,6 @@
 <h2>DESCRIPTION</h2>
 
-<p><em>i.evapo.PM</em>, given the vegetation height (hc), humidity (RU), 
+<p><em>i.evapo.pm</em>, given the vegetation height (hc), humidity (RU), 
 wind speed at two meters height (WS), temperature (T), digital terrain model (DEM), 
 and net radiation (NSR) raster input maps, 
 calculates the potential evapotranspiration map (EPo).
