g.gui.vdigit manual: update 'Copy features from (background) vector map' description (contributed by Aldo Clerici)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65817 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/gui/wxpython/vdigit/g.gui.vdigit.html
+++ b/gui/wxpython/vdigit/g.gui.vdigit.html
@@ -66,12 +66,11 @@ The vector digitizer allows you to select a &quot;background&quot; vector map.
 Loading it within the digitizer is different from simply loading it via 
 <em>Layer Manager</em> since direct interaction with single vector features
 then becomes possible.<br>
-A background map can be selected from the map layer contextual menu, in
-<em>Layer Manager</em> (&quot;Use as Background Map&quot;). Newly digitized vector
-features are snapped in the given threshold to the features from the
-background map. Vector features may be also copied from the background
-map by &quot;Copy features from (background) vector map&quot; tool
-from the digitizer toolbar.
+Vector features may be copied from the background map by &quot;Copy features from
+(background) vector map&quot; tool from the &quot;Additional tools&quot; of the
+digitizer toolbar.
+Newly digitized vector features are snapped in the given threshold to the features
+from the background map.
 
 <h3>DIGITIZER TOOLBAR</h3>
 
@@ -177,7 +176,7 @@ from the digitizer toolbar.
 	layer/category pairs are not removed from category settings of
 	the target features.</li>
 
-      <li><em>Copy features from (background) map</em><br> Make identical copy of
+      <li><em>Copy features from (background) vector map</em><br> Make identical copy of
 	selected vector features. If a background vector map has been 
 	selected from the Layer Manager, copy features from background 
 	vector map, not from the currently modified vector map.</li>
