interlink modules which move a map
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65845 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.region/r.region.html
+++ b/raster/r.region/r.region.html
@@ -42,8 +42,11 @@ r.region map=mymap n=n+100 e=e+100 w=w+100 s=s+100
 
 <h2>SEE ALSO</h2>
 
-<em><a href="r.support.html">r.support</a></em><br>
-<em><a href="g.region.html">g.region</a></em>
+<em>
+<a href="r.support.html">r.support</a>,
+<a href="g.region.html">g.region</a>,
+<a href="v.transform.html">v.transform</a>
+</em>
 
 
 <h2>AUTHOR</h2>
