--- a/vector/v.transform/v.transform.html
+++ b/vector/v.transform/v.transform.html
@@ -80,7 +80,8 @@ The resulting map is a 3D vector map.
 <em>
 <a href="m.transform.html">m.transform</a>,
 <a href="i.rectify.html">i.rectify</a>,
-<a href="v.rectify.html">v.rectify</a>
+<a href="v.rectify.html">v.rectify</a>,
+<a href="r.region.html">r.region</a>
 </em>
 
 <h2>AUTHOR</h2>
